# neta-resume

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  NOTICE  README.md  SECURITY.md  docker-compose.yml
api/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
api/neta_api/: cachecontrol.py  deps.py  main.py  ratelimit.py  schemas.py
api/neta_api/routers/: aggregate.py  elections.py  indicators.py  parliament.py  persons.py  questions.py  search.py  stats.py  visits.py
api/neta_api/services/: indicators.py  parliament.py  resume.py
ingestion/: .env.example  pyproject.toml
ingestion/neta_ingest/: admin.py  cli.py  config.py  provenance.py
ingestion/neta_ingest/db/: engine.py  upsert.py
ingestion/neta_ingest/http/: client.py
ingestion/neta_ingest/pipelines/: affidavit_attach.py  affidavits.py  assembly_backfill.py  attendance.py  contacts.py  criminal.py  enrich_missing_affidavits.py  historical_lookup.py  leadership.py  merge_cycles.py  myneta.py  news.py  rajya_sabha.py  resolve_persons.py  roster.py
ingestion/neta_ingest/pipelines/enrich/: activity.py  affidavit_contacts.py  attendance.py  committees.py  contacts.py  enrich_switches.py  leadership.py  native_names.py  news.py  parliamentary_record.py
ingestion/neta_ingest/pipelines/identity/: affidavit_attach.py  affidavits.py  canon_parties.py  criminal.py  derive_identity_signals.py  merge_cycles.py  myneta.py  party_switch.py  relatives_backfill.py  resolve_persons.py  review.py  stitch_identities.py  stitch_score.py
ingestion/neta_ingest/pipelines/lok_sabha/: enrich_missing_affidavits.py  historical_lookup.py  ls_roster.py  roster.py
ingestion/neta_ingest/pipelines/macro/: indicators.py  institutions.py
ingestion/neta_ingest/pipelines/rajya_sabha/: rajya_sabha.py
ingestion/neta_ingest/pipelines/state/: assembly_backfill.py  onboard.py
ingestion/neta_ingest/resolve/: blocking.py  link.py  match.py  surf.py
ingestion/neta_ingest/sources/courts/: client.py
ingestion/neta_ingest/sources/datagovin/: client.py
ingestion/neta_ingest/sources/google_news/: client.py
ingestion/neta_ingest/transform/: money.py  names.py  parties.py  sections.py
ingestion/scripts/: adjudicate_review.py  backfill_historical_terms.py  qa_backfill.py
ingestion/tests/: test_admin.py  test_affidavit_attach.py  test_merge_resolve.py  test_ministry_themes_seed.py  test_myneta_parser.py  test_prs_client.py  test_stitch_chain.py  test_stitch_score.py  test_transform.py
ingestion/tests/fixtures/: myneta_candidate_5083.html  myneta_candidate_5395.html  myneta_candidate_ls2009_281.html  myneta_candidate_ls2014_4916.html  myneta_candidate_mh2024_1148.html  myneta_winners_ls2024.html  prs_mptrack_ls_listing.html  prs_mptrack_profile_tharoor.html
(+137 files in other folders)
