[project]
name = "neta-api"
version = "0.1.0"
description = "Neta-Resume read API: assembles the resume aggregate, emits OpenAPI for the frontend."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "limits>=3.0",
]

[dependency-groups]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.5"]

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["neta_api"]
