[project]
name = "neta-ingest"
version = "0.1.0"
description = "Neta-Resume ingestion runner: the Typer CLI + pipelines. Depends on neta-core + neta-sources."
requires-python = ">=3.12"
dependencies = [
    "neta-core",
    "neta-sources",
    "sqlalchemy>=2.0",      # pipelines issue raw SQL via text()
    "typer>=0.12",          # CLI (`neta <pipeline>`)
    "playwright>=1.60",     # JS/heavy pages
    "python-dateutil>=2.9",
    "jellyfish>=1.0",       # Jaro-Winkler for the fuzzy name-match tier (record-linkage-grade)
]

[tool.uv.sources]
neta-core = { workspace = true }
neta-sources = { workspace = true }

[project.scripts]
neta = "neta_ingest.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["neta_ingest"]
